functional jdbc polish